--- a/companyFlatform/src/main/resources/messages/messages.properties
+++ b/companyFlatform/src/main/resources/messages/messages.properties
@@ -1,1 +1,3 @@
-error.company.notfound.company.valid.E0001=회사ID: {0}이(가) 존재하지 않습니다.
+error.company.notfound.company.valid.E0001=회사{0}: 공백입니다.
+error.company.inputnull.company.valid.E0002=회사등록 정보의 {0}(을)를 입력하지 않았습니다.
+error.company.notfound.companyIdList.E0003=ID가 존재하지 않습니다.
